--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -11,4 +11,4 @@ jobs:
       - uses: swift-actions/setup-swift@v1
       - uses: actions/checkout@v3
       - name: Build
-        run: ./Run.swift
+        run: which swift && ./Run.swift
